# reinforcement-learning-from-feature-rewards-replication

./: .gitignore  README.md  RLFR_implementation.ipynb  Untitled.ipynb  Untitled1.ipynb  config_experimental_setup.txt  main.py  monitoring_pipeline.ipynb  pyproject.toml  rlfr_replication_test.ipynb  test_run.yaml  untitled.py  untitled.txt
Data/: probe_training_data.csv
Utilities/: Untitled.ipynb  batch_size.py  batch_test.slurm
Utilities/wandb/: latest-run
Utilities/wandb/run-20260528_140351-3wcndbyw/: run-3wcndbyw.wandb
Utilities/wandb/run-20260528_140351-3wcndbyw/files/: config.yaml  requirements.txt  wandb-metadata.json
Utilities/wandb/run-20260528_140351-3wcndbyw/files/code/Utilities/: batch_size.py
Utilities/wandb/run-20260528_141226-n3mb1xcq/: run-n3mb1xcq.wandb
Utilities/wandb/run-20260528_141226-n3mb1xcq/files/: wandb-metadata.json
Utilities/wandb/run-20260528_143110-gd8rvu81/files/: wandb-metadata.json
Utilities/wandb/run-20260528_143110-gd8rvu81/files/code/Utilities/: generate_model_response.py
long_factpp/train/: dataset_info.json  state.json
