[project]
name = "reinforcement-learning-from-feature-rewards-replication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.5",
    "google-genai>=2.7.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "torch==2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers==4.57.6",
    "vllm==0.8.5",
    "wandb>=0.27.0",
]
